--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "lottery-react",
   "version": "0.1.0",
   "private": true,
+  "engines":{
+    "node": "9.11.2"
+    "npm": "6.5.0"
+  }
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
