--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines":{
-    "node": "9.11.2"
+    "node": "9.11.2",
     "npm": "6.5.0"
   }
   "dependencies": {
